--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm run build
 
       - uses: chrislennon/action-aws-cli@v1.1
-      - run: aws sync dist s3;//${{ secrest.AWS_S3_BUCKET_NAME }}/container/latest
+      - run: aws sync dist s3://$${{ secrets.AWS_S3_BUCKET_NAME }}/container/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
