--- a/.github/workflows/dashboard.yml
+++ b/.github/workflows/dashboard.yml
@@ -1,15 +1,15 @@
-name: deploy-auth
+name: deploy-dashboard
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'packages/auth/**'
+      - 'packages/dashboard/**'
 
 defaults:
   run:
-      working-directory: packages/auth 
+      working-directory: packages/dashboard 
 
 jobs:
   build:
@@ -22,12 +22,12 @@ jobs:
           PRODUCTION_DOMAIN: ${{ secrets.PRODUCTION_DOMAIN }}
 
       - uses: chrislennon/action-aws-cli@v1.1
-      - run: aws sync dist s3://$${{ secrets.AWS_S3_BUCKET_NAME }}/auth/latest
+      - run: aws sync dist s3://$${{ secrets.AWS_S3_BUCKET_NAME }}/dashboard/latest
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
 
-      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/auth/latest/remoteEntry.json" 
+      - run: aws cloudfront create-invalidation --distribution-id ${{ secrets.AWS_CLOUDFRONT_DISTRIBUTION_ID }} --paths "/dashboard/latest/remoteEntry.json" 
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
